--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -25,7 +27,11 @@
     "telegraf": "^4.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "eslint": "^7.26.0",
-    "nodemon": "^2.0.7"
+    "jest": "^30.2.0",
+    "nodemon": "^2.0.7",
+    "supertest": "^7.1.4"
   }
 }
