--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "start-dev": "nodemon index.js",
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prepare": "pre-commit install"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +35,7 @@
     "eslint": "^7.26.0",
     "jest": "^30.2.0",
     "nodemon": "^2.0.7",
+    "pre-commit": "^1.2.2",
     "supertest": "^7.1.4"
   }
 }
