--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,9 @@ dist
 
 .idea/
 .vscode/launch.json
+
+# Grounding service cache (temporary)
+.cache/grounding/
+
+# pre-commit cache
+.pre-commit/
