--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prepare": "pre-commit install"
+    "lint:fix": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
