--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,14 @@
     "chat.tools.terminal.autoApprove": {
         ".specify/scripts/bash/": true,
         ".specify/scripts/powershell/": true
+    },
+    "github.copilot.advanced": {
+        "debug.useNodeFetcher": true,
+        "debug.useNodeFetchFetcher": false
+    },
+    "remote.extensionKind": {
+        "github.copilot": "ui",
+        "github.copilot-chat": "ui"
     }
 }
 
