--- a/.env.example
+++ b/.env.example
@@ -120,3 +120,14 @@ AZURE_LLM_KEY=your_azure_api_key_or_github_pat_here
 # Azure AI LLM model deployment name
 # Example: openai/gpt-5-mini (GitHub Models) or gpt-4o (Azure)
 AZURE_LLM_MODEL=your_model_name_here
+
+# ============================================================================
+# URL Shortening for WhatsApp (Optional - requires API key for selected service)
+# ============================================================================
+URL_SHORTENER_SERVICE=bitly
+BITLY_ACCESS_TOKEN=
+TINYURL_API_KEY=
+PICSEE_API_KEY=
+REURL_API_KEY=
+CUTTLY_API_KEY=
+PIXNET0RZ_API_KEY=
