--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-healthcheck": "^0.1.0",
     "firebase-admin": "^9.8.0",
     "helmet": "^7.1.0",
+    "prettylink": "^1.1.0",
     "telegraf": "^4.3.0",
     "uuid": "^9.0.0"
   },
