refactor: Improves URL shortening service logic for resilience
Refactors the URL shortening service to improve resilience and provide fallback mechanisms.

- Introduces service prioritization and fallback to alternative services upon failure.
- Adds failure tracking to avoid repeatedly calling failing services.
- Improves configuration handling and validation.
- Updates dependencies to use Prettylink library directly to support multiple URL shorteners.

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,10 @@ IS_PULL_REQUEST=false
 # Enable news monitoring endpoint (default: false)
 ENABLE_NEWS_MONITOR=false
 
+# Enable news monitoring endpoint in test mode (default: false)
+# In test mode, alerts are generated without real news data
+ENABLE_NEWS_MONITOR_TEST_MODE=false
+
 # Default crypto symbols if not provided in request (comma-separated)
 # Example: BTCUSDT,ETHUSD,BNBUSDT
 NEWS_SYMBOLS_CRYPTO=BTCUSDT,ETHUSD,BNBUSDT
