--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "express-healthcheck": "^0.1.0",
     "firebase-admin": "^9.8.0",
     "helmet": "^7.1.0",
-    "telegraf": "^4.3.0"
+    "prettylink": "^1.1.0",
+    "telegraf": "^4.3.0",
+    "uuid": "^9.0.0"
+  },
+  "optionalDependencies": {
+    "@azure-rest/ai-inference": "^1.0.0-alpha.20250310.1",
+    "@azure/core-auth": "^1.7.0",
+    "@azure/core-sse": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -34,7 +41,6 @@
     "eslint": "^7.26.0",
     "jest": "^30.2.0",
     "nodemon": "^2.0.7",
-    "pre-commit": "^1.2.2",
     "supertest": "^7.1.4"
   }
 }
