feat(sentry): implement runtime error monitoring for node.js service
- Add @sentry/node v8.0.0 integration with auto-initialization on startup
- Implement SentryService abstraction layer with configuration management
- Capture runtime errors from alert webhook, news monitor, and Telegram handlers
- Capture external delivery failures from WhatsApp and Telegram after retries
- Capture process-level errors (uncaughtException, unhandledRejection)
- Auto-detect environment (development, preview, production) from Render/Node env
- Derive release version from Git commit hash
- Add comprehensive tagging for error categorization and analysis
- Implement feature flag (ENABLE_SENTRY) for environment-based control
- Ensure non-intrusive monitoring (never affects application behavior)
- Add 45 new unit and integration tests covering all error types
- Update documentation (README, quickstart, tasks) with implementation details

Test Coverage: 356/356 tests passing, no regressions
Code Quality: ESLint compliant on all new Sentry-specific files

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/genai": "^1.27.0",
+    "@sentry/node": "^8.0.0",
     "binance": "^2.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
