fix(monitoring): correct Sentry config logic and env loading
Ensures environment variables are loaded before usage and
fixes the conditional that checks for Sentry DSN configuration,
leading to more reliable Sentry integration.

--- a/.env.example
+++ b/.env.example
@@ -135,3 +135,14 @@ PICSEE_API_KEY=
 REURL_API_KEY=
 CUTTLY_API_KEY=
 PIXNET0RZ_API_KEY=
+
+# ============================================================================
+# Sentry Monitoring Configuration (Optional)
+# ============================================================================
+ENABLE_SENTRY=false # Enable Sentry error reporting (`true` or `false`, default: `false`)
+SENTRY_DSN=your_sentry_dsn_here # Sentry Data Source Name (DSN) from your Sentry project settings
+SENTRY_SEND_ALERT_CONTENT=true # Include alert text in error events (`true` or `false`, default: `true`)
+SENTRY_SAMPLE_RATE_ERRORS=1.0 # Error sample rate from 0.0 to 1.0 (default: `1.0` = 100% of errors)
+SENTRY_ENVIRONMENT=development # Explicit environment tag (`production`, `preview`, `development`). Auto-derived if not set
+SENTRY_RELEASE=local # Explicit release tag (e.g., `v1.2.3`). Auto-derived from git commit if not set
+# ============================================================================
