feat(logging): add configurable log level support
Introduces a global logging configuration with adjustable verbosity via environment variables. Replaces direct console calls with log level-aware output, enabling better log filtering and reducing noise in production.

Documents the new setting and updates related log messages for clarity.

Improves operational visibility and debugging flexibility.

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,10 @@ TELEGRAM_ADMIN_NOTIFICATIONS_CHAT_ID=your_admin_chat_id_here
 # HTTP server port (default: 80)
 PORT=80
 
+# Log level for console output (debug, info, warn, error, silent)
+# Defaults to debug in development and info in production
+LOG_LEVEL=info
+
 # Render.com deployment flag (set automatically by Render)
 RENDER=false
 
