--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "uuid": "^9.0.0"
   },
   "optionalDependencies": {
-    "@azure-rest/ai-inference": "^1.0.0-alpha.20250310.1",
-    "@azure/core-auth": "^1.7.0",
-    "@azure/core-sse": "^1.0.0"
+    "@azure-rest/ai-inference": "^1.0.0-beta.6",
+    "@azure/core-auth": "^1.10.1",
+    "@azure/core-sse": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
